--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<p>My current favourite sing is <a href="https://youtu.be/vak7KRRUERI">Tere Liye</a></p>
 
 </body>
 
